# AVIATOR

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
LoRA_FT/: GRPO_FT.py  LoRA_FT.py  README.md
awe/: .gitignore  Agent.py  AgenticWorkflow.py  Edge.py  History.py  RAG.py  README.md  __init__.py  custom_types.py  environment.yml  instantiate_workflow.py  pyproject.toml
awe/LLMs/: DummyTestLLM.py  FastLM.py  HFpipeline.py  LLM.py  OpenAICompatibleLLM.py  __init__.py
scripts/: run_injection.sh  run_injection_with_eval.sh  setup_aviator.sh
validation_data/: primevul_paired_test_45.jsonl
validation_dataset/: formai_with_benign_37.jsonl  sard100_esbmc_detect_paired.jsonl
vul_code_gen/: evaluate_generated_code.py  index_knowledge_base.py  run_AVIATOR.py  vul_code_gen_workflow_validate_run.py
vul_code_gen/AVIATOR_13steps_full_workflow/: VulCodePairRAG.py  vul_code_gen_workflow_FT.json  vul_code_gen_workflow_functions.py  vul_code_gen_workflow_noFT.json  vul_code_gen_workflow_prompts.py
vul_code_gen/AVIATOR_14steps_CWEselector/: vul_code_gen_workflow_functions.py  vul_code_gen_workflow_noFT_CWEselector_random.json  vul_code_gen_workflow_noFT_after_CWEselector.json  vul_code_gen_workflow_noFT_before_CWEselector.json  vul_code_gen_workflow_prompts.py  vulnerability_probabilities.json
vul_code_gen/dataset_utils/: __init__.py  get_primevul.py  load_formai_paired.py  load_jsonl_to_dataframe.py  load_sard100.py
vul_code_gen/wfl_13steps_noJusification_diff_vulChecker/: VulCodePairRAG.py  (+4 more)
(+14 files in other folders)
