[project]
name = "aviator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.12.0",
    "codebleu>=0.7.0",
    "langchain-chroma>=1.1.0",
    "langchain-huggingface>=1.2.0",
    "langchain-text-splitters>=1.1.0",
    "openai>=2.20.0",
    "pandas>=3.0.0",
    "sentence-transformers>=5.2.2",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
    "transformers>=4.57.6",
    "tree-sitter-cpp==0.21.0",
]
